--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "msgpack-lite": "^0.1.26",
     "msgpack5rpc": "^1.1.0",
     "neovim": "^3.5.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "promised-neovim-client": "^2.0.2",
     "raf": "3.4.0",
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
