--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "vv",
+  "description": "Vim GUI",
+  "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +18,6 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "electron": "^2.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "1.9.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "fix-path": "^2.1.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -49,12 +51,36 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
-  "main": "./electron.js",
+  "main": "./electron/electron.js",
   "scripts": {
-    "electron": "electron .",
+    "electron": "ELECTRON_ENV=development electron .",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "postinstall": "electron-builder install-app-deps",
+
+    "preelectron-pack": "yarn build",
+    "electron-pack": "build -c.extraMetadata.main=electron/electron.js",
+    "postelectron-pack": "cp -r dist/mac/vv.app /Applications; ln -s -f /Applications/vv.app/Contents/Resources/bin/vv /usr/local/bin/vv"
+  },
+  "homepage": "./",
+  "build": {
+    "appId": "vv.app.todo.id",
+    "mac": {
+      "category": "your.app.category.type"
+    },
+    "files": [
+      "build/**/*",
+      "electron/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "extraResources": [
+      "electron/bin/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "jest": {
     "collectCoverageFrom": [
@@ -97,5 +123,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "electron": "^2.0.1",
+    "electron-builder": "^20.13.4"
   }
 }
