--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,12 @@
 {
   "extends": "airbnb",
-  "plugins": [
-    "react"
-  ],
   "env": {
     "browser": true
-  },
-  "settings": {
-    "import/external-module-folders": ['node_moduless', 'components', 'app']
   },
   "rules": {
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
-    "no-shadow": "off",
     "react/require-default-props": "off",
     "prefer-destructuring": ["warn", {
       "VariableDeclarator": {
@@ -38,6 +31,7 @@
       }
     ],
     "commented": {
+      "--comment--no-shadow": "off",
       "--comment--camelcase": "off",
       "--comment--react/prefer-stateless-function": [0],
       "--comment--radix": "off",
