--- a/package.json
+++ b/package.json
@@ -4,74 +4,32 @@
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "child_process": "^1.0.2",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "fix-path": "^2.1.0",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
-    "lodash": "^4.17.10",
-    "msgpack-lite": "^0.1.26",
-    "msgpack5rpc": "^1.1.0",
-    "neovim": "^3.5.2",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "promise": "8.0.1",
-    "raf": "3.4.0",
-    "react": "^16.3.2",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.2",
-    "resolve": "1.6.0",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
-  },
-  "main": "./electron/electron.js",
+  "keywords": [
+    "vim",
+    "neovim",
+    "client",
+    "gui",
+    "electron"
+  ],
+  "license": "ISC",
+  "main": "./build/main.js",
   "scripts": {
-    "electron": "ELECTRON_ENV=development electron .",
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "postinstall": "electron-builder install-app-deps",
-    "preelectron-build": "yarn build",
-    "electron-build": "build -c.extraMetadata.main=electron/electron.js",
-    "postelectron-build": "cp -r dist/mac/VV.app /Applications; ln -s -f /Applications/VV.app/Contents/Resources/bin/vv /usr/local/bin/vv"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack:build": "rm -rf build/*; webpack --config ./config/webpack.prod.config.js",
+    "start:main": "webpack --watch --config ./config/webpack.main.config.js",
+    "start:renderer": "webpack-dev-server --config ./config/webpack.renderer.config.js",
+    "start": "electron .",
+    "preelectron:build": "yarn webpack:build",
+    "electron:build": "build -c.extraMetadata.main=build/main.js",
+    "postelectron:build": "cp -r dist/mac/VV.app /Applications; ln -s -f /Applications/VV.app/Contents/Resources/bin/vv /usr/local/bin/vv"
   },
-  "homepage": "./",
   "build": {
-    "appId": "vv.app.todo.id",
+    "appId": "TODO.vv.app.id",
     "mac": {
-      "category": "your.app.category.type"
+      "category": "TODO.app.category.type"
     },
     "files": [
-      "build/**/*",
-      "electron/**/*"
+      "build/**/*"
     ],
     "extraResources": [
       "bin/**/*"
@@ -80,50 +38,28 @@
       "buildResources": "assets"
     }
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "devDependencies": {
-    "electron": "^2.0.1",
-    "electron-builder": "^20.13.4"
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "^7.1.4",
+    "child_process": "^1.0.2",
+    "concurrently": "^3.5.1",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "fix-path": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "uglify-es": "3.3.9",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "neovim": "^4.0.1"
   }
 }
