--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "react/require-default-props": "off",
+    "no-shadow": "off",
     "prefer-destructuring": ["warn", {
       "VariableDeclarator": {
         "object": true,
@@ -31,7 +32,6 @@
       }
     ],
     "commented": {
-      "--comment--no-shadow": "off",
       "--comment--camelcase": "off",
       "--comment--react/prefer-stateless-function": [0],
       "--comment--radix": "off",
