--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gui",
     "electron"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "main": "./build/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
