--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "VV",
-  "description": "NeoVim GUI Client",
+  "description": "Neovim GUI Client",
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "keywords": [
     "vim",
