Dev mode without webpack dev server
Now you can start development with `yarn webpack:watch` and `yarn start`. If you want to use webpack dev server for renderer, you need to do `yarn start:main`, `yarn start:renderer` and `DEV_SERVER=true yarn start`.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack:build": "rm -rf build/*; webpack --config ./config/webpack.prod.config.js",
     "start:main": "webpack --watch --config ./config/webpack.main.config.js",
     "start:renderer": "webpack-dev-server --config ./config/webpack.renderer.config.js",
+    "webpack:watch": "webpack --watch --config ./config/webpack.config.js",
     "start": "electron .",
     "preelectron:build": "yarn webpack:build",
     "electron:build": "build -c.extraMetadata.main=build/main.js",
