Insert special chars with Alt
When you press Alt+key in Mac it types special chars like åßœ, insert them as-is in insert, replace, command line modes.

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,12 +11,12 @@
     "no-shadow": "off",
     "prefer-destructuring": ["warn", {
       "VariableDeclarator": {
-        "object": true,
-        "array": true
+        "array": false,
+        "object": true
       },
       "AssignmentExpression": {
-        "array": true,
-        "object":false
+        "array": false,
+        "object": true
       }
     }],
     "no-mixed-operators": [
