--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "directories": {
       "buildResources": "assets"
     },
-    "fileAssociations": [{
-      "ext": "*",
-      "name": "Document"
-    }]
+    "fileAssociations": [
+      {
+        "ext": "*",
+        "name": "Document"
+      }
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
@@ -66,6 +68,6 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "neovim": "^4.1.0"
+    "neovim": "^4.2.1"
   }
 }
