--- a/package.json
+++ b/package.json
@@ -56,9 +56,8 @@
     "electron": "^2.0.2",
     "electron-builder": "^20.15.1",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "fix-path": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "uglify-es": "3.3.9",
