--- a/package.json
+++ b/package.json
@@ -64,10 +64,11 @@
     "uglify-es": "3.3.9",
     "webpack": "^4.9.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "neovim": "^4.2.1"
+    "neovim": "^4.2.1",
+    "pixi.js": "^4.8.5"
   }
 }
