Fix cursor colors
Cursor colors will not work until you set any guicursor (https://github.com/neovim/neovim/issues/6425). For example:
```
hi! Cursor guifg=#FF0000 guibg=#00FF00¬
set guicursor=n-v-c:block-Cursor/lCursor-blinkon0,i-ci:ver25-Cursor/lCursor,r-cr:hor20-Cursor/lCursor
```

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "prettier"],
   "env": {
     "browser": true
   },
@@ -30,6 +30,6 @@
         ],
         "allowSamePrecedence": true
       }
-    ],
+    ]
   },
 }
