--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
       "@babel/preset-env", {
         "targets": {
-          "node": "current"
+          "electron": "2.0.11"
         }
       }
     ]
