--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "electron-store": "^2.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
+    "prettier": "^1.16.4",
     "uglify-es": "3.3.9",
     "webpack": "^4.9.1",
     "webpack-cli": "^3.1.2",
