--- a/package.json
+++ b/package.json
@@ -51,17 +51,13 @@
     "@babel/preset-env": "^7.0.0-beta.49",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^7.1.4",
-    "child_process": "^1.0.2",
-    "concurrently": "^3.5.1",
     "electron": "^2.0.2",
-    "electron-builder": "^20.15.1",
-    "electron-store": "^2.0.0",
+    "electron-builder": "^20.39.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.11",
     "prettier": "^1.16.4",
     "uglify-es": "3.3.9",
     "webpack": "^4.9.1",
@@ -70,7 +66,10 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "neovim": "^4.4.0",
+    "child_process": "^1.0.2",
+    "electron-store": "^3.0.0",
+    "lodash": "^4.17.11",
+    "msgpack-lite": "^0.1.26",
     "pixi.js": "^4.8.5"
   }
 }
