--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@babel/core": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
-    "electron": "^5.0",
+    "electron": "7.1.3",
     "electron-builder": "^21.1",
     "electron-notarize": "^0.2.1",
     "eslint": "^6.2",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -58,7 +58,7 @@
     "@pixi/sprite": "^5.1.2",
     "@pixi/ticker": "^5.1.1",
     "child_process": "^1.0.2",
-    "electron-store": "^4.0",
+    "electron-store": "^5.1.0",
     "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
     "semver": "^6.3.0"
