--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
-    "electron": "7.1.2",
-    "electron-builder": "^21.1",
+    "electron": "^8.0.0",
+    "electron-builder": "^22.3.2",
     "electron-notarize": "^0.2.1",
     "eslint": "^6.2",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -54,10 +54,10 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@pixi/app": "^5.1.2",
-    "@pixi/core": "^5.1.2",
-    "@pixi/sprite": "^5.1.2",
-    "@pixi/ticker": "^5.1.1",
+    "@pixi/app": "^5.2.1",
+    "@pixi/core": "^5.2.1",
+    "@pixi/sprite": "^5.2.1",
+    "@pixi/ticker": "^5.2.1",
     "child_process": "^1.0.2",
     "electron-store": "^5.1.0",
     "electron-updater": "^4.2.0",
