--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "VV",
   "description": "Neovim GUI Client",
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "private": true,
   "keywords": [
     "vim",
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "main": "./build/main.js",
+  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack:build": "rm -rf build/*; webpack --config ./config/webpack.prod.config.js",
@@ -28,29 +29,29 @@
     "postrelease": "open https://github.com/vv-vim/vv/releases"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
-    "electron": "^8.0.0",
+    "electron": "^8.0.2",
     "electron-builder": "^22.3.2",
     "electron-notarize": "^0.2.1",
-    "eslint": "^6.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.5",
+    "husky": "^4.2.3",
     "js-yaml": "^3.13.1",
-    "lint-staged": ">=8",
+    "lint-staged": "^10.0.8",
     "prettier": "^1.16.4",
     "uglify-es": "3.3.9",
-    "webpack": "^4.9.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
@@ -60,12 +61,12 @@
     "@pixi/ticker": "^5.2.1",
     "@pixi/utils": "^5.2.1",
     "child_process": "^1.0.2",
-    "electron-store": "^5.1.0",
-    "electron-updater": "^4.2.0",
+    "electron-store": "^5.1.1",
+    "electron-updater": "^4.2.2",
     "html2plaintext": "^2.1.2",
     "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
-    "semver": "^6.3.0"
+    "semver": "^7.1.3"
   },
   "husky": {
     "hooks": {
