--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "main": "./build/main.js",
   "sideEffects": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack:build": "rm -rf build/*; webpack --config ./config/webpack.prod.config.js",
     "webpack:watch": "webpack --watch --config ./config/webpack.config.js",
     "start:main": "webpack --watch --config ./config/webpack.main.config.js",
     "start:renderer": "webpack-dev-server --config ./config/webpack.renderer.config.js",
     "start:devserver": "DEV_SERVER=true electron .",
     "start": "electron .",
+    "lint": "yarn eslint . --ext .js,.ts",
     "filetypes": "node scripts/filetypes.js",
     "build": "yarn webpack:build; electron-builder -c.mac.identity=null -c.extraMetadata.main=build/main.js --config config/electron-builder/build.js",
     "postbuild": "rm -r /Applications/VV.app; cp -r dist/mac/VV.app /Applications; ln -s -f /Applications/VV.app/Contents/Resources/bin/vv /usr/local/bin/vv",
@@ -42,11 +43,15 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "jest-github-actions-reporter": "^1.0.2",
     "js-yaml": "^3.13.1",
     "lint-staged": "^10.0.8",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.16.4",
     "uglify-es": "3.3.9",
     "webpack": "^4.41.6",
