--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.4",
+    "@types/node": "12",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
-    "electron": "^8.0.2",
+    "electron": "^8.1.1",
     "electron-builder": "^22.3.2",
     "electron-notarize": "^0.2.1",
     "eslint": "^6.8.0",
@@ -53,6 +58,7 @@
     "lint-staged": "^10.0.8",
     "node-fetch": "^2.6.0",
     "prettier": "^1.16.4",
+    "typescript": "^3.8.3",
     "uglify-es": "3.3.9",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
