--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
   "dependencies": {
     "@pixi/app": "^5.2.1",
     "@pixi/core": "^5.2.1",
+    "@pixi/math": "^5.2.1",
+    "@pixi/particles": "^5.2.1",
     "@pixi/sprite": "^5.2.1",
     "@pixi/ticker": "^5.2.1",
     "@pixi/utils": "^5.2.1",
