--- a/babel.config.json
+++ b/babel.config.json
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "electron": "2.0.18"
-        }
-      }
-    ],
-    "@babel/preset-typescript"
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"]
 }
