Migrate to TypeScript for main

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,7 +41,7 @@ jobs:
       run: yarn
 
     - name: Run ESLint
-      run: yarn lint --max-warnings=0
+      run: yarn lint
       if: always()
 
     - name: Run Tests
