--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.4",
+    "@types/lodash": "^4.14.157",
+    "@types/msgpack-lite": "^0.1.7",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
