--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noEmit": true,
     "strict": true,
     "moduleResolution": "node",
-    "sourceMap": true
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src", "@types"]
 }
