--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "VV",
   "description": "Neovim GUI Client",
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "private": true,
   "keywords": [
     "vim",
@@ -30,58 +30,58 @@
     "postrelease": "open https://github.com/vv-vim/vv/releases"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/jest": "^25.1.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.3",
     "@types/lodash": "^4.14.157",
     "@types/msgpack-lite": "^0.1.7",
-    "@types/node": "12",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.0.6",
-    "chalk": "^3.0.0",
+    "@types/node": "^12.12.47",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "electron": "^8.1.1",
-    "electron-builder": "^22.3.2",
-    "electron-notarize": "^0.2.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
+    "electron": "^9.0.5",
+    "electron-builder": "^22.7.0",
+    "electron-notarize": "^1.0.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "jest-github-actions-reporter": "^1.0.2",
-    "js-yaml": "^3.13.1",
-    "lint-staged": "^10.0.8",
+    "js-yaml": "^3.14.0",
+    "lint-staged": "^10.2.11",
     "node-fetch": "^2.6.0",
-    "prettier": "^1.16.4",
-    "typescript": "^3.8.3",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.6",
     "uglify-es": "3.3.9",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@pixi/app": "^5.2.1",
-    "@pixi/core": "^5.2.1",
-    "@pixi/display": "^5.2.4",
-    "@pixi/graphics": "^5.2.4",
-    "@pixi/sprite": "^5.2.1",
-    "@pixi/ticker": "^5.2.1",
-    "@pixi/utils": "^5.2.1",
+    "@pixi/app": "^5.3.0",
+    "@pixi/core": "^5.3.0",
+    "@pixi/display": "^5.3.0",
+    "@pixi/graphics": "^5.3.0",
+    "@pixi/sprite": "^5.3.0",
+    "@pixi/ticker": "^5.3.0",
+    "@pixi/utils": "^5.3.0",
     "child_process": "^1.0.2",
-    "electron-store": "^5.1.1",
-    "electron-updater": "^4.2.2",
+    "electron-store": "^5.2.0",
+    "electron-updater": "^4.3.1",
     "html2plaintext": "^2.1.2",
     "lodash": "^4.17.15",
     "msgpack-lite": "^0.1.26",
-    "semver": "^7.1.3"
+    "semver": "^7.3.2"
   },
   "husky": {
     "hooks": {
