--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "js-yaml": "^3.14.0",
     "lint-staged": "^10.2.11",
     "node-fetch": "^2.6.0",
+    "pixi.js": "^5.3.0",
     "prettier": "^2.0.5",
     "typescript": "^3.9.6",
     "uglify-es": "3.3.9",
