Extract main <-> renderer communication to a separate module
Add abstraction on top of ipcRenderer/ipcMain to unify main <-> renderer communication. This may help adding alternative methods of renderer communication (for example WebSocket) to unlock run VV remotely in browser (#47).

Also did some refactoring and improvements:
* Add `@renderer`, `@main` and `@lib` module aliases to avoid deep relative imports.
* Added some tests.
* Minor eslint/jest tweaks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
     "strict": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@renderer/*": ["src/renderer/*"],
+      "@main/*": ["src/main/*"],
+      "@lib/*": ["src/lib/*"]
+    }
   },
   "include": ["src", "@types"]
 }
