Make it work in browser
Proof of concept:
yarn webpack:watch
yarn server:dev
http://localhost:3000

#47

--- a/babel.config.json
+++ b/babel.config.json
@@ -9,6 +9,7 @@
         "alias": {
           "@renderer": "./src/renderer",
           "@main": "./src/main",
+          "@server": "./src/server",
           "@lib": "./src/lib"
         }
       }
