--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "paths": {
       "@renderer/*": ["src/renderer/*"],
       "@main/*": ["src/main/*"],
+      "@server/*": ["src/server/*"],
       "@lib/*": ["src/lib/*"]
     }
   },
