--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "test": "jest",
     "webpack:build": "rm -rf build/*; webpack --config ./config/webpack.prod.config.js",
     "webpack:watch": "webpack --watch --config ./config/webpack.config.js",
-    "start:main": "webpack --watch --config ./config/webpack.main.config.js",
-    "start:renderer": "webpack-dev-server --config ./config/webpack.renderer.config.js",
-    "start:devserver": "DEV_SERVER=true electron .",
+    "server": "node build/server.js",
+    "server:dev": "nodemon build/server.js",
     "start": "electron .",
     "lint": "yarn eslint . --ext .js,.ts",
     "filetypes": "node scripts/filetypes.js",
@@ -34,10 +33,12 @@
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.3",
     "@types/lodash": "^4.14.157",
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^12.12.47",
+    "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "babel-loader": "^8.1.0",
@@ -60,6 +61,7 @@
     "js-yaml": "^3.14.0",
     "lint-staged": "^10.2.11",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.4",
     "pixi.js": "^5.3.0",
     "prettier": "^2.0.5",
     "typescript": "^3.9.6",
@@ -80,10 +82,12 @@
     "child_process": "^1.0.2",
     "electron-store": "^5.2.0",
     "electron-updater": "^4.3.1",
+    "express": "^4.17.1",
     "html2plaintext": "^2.1.2",
     "lodash": "^4.17.19",
     "msgpack-lite": "^0.1.26",
-    "semver": "^7.3.2"
+    "semver": "^7.3.2",
+    "ws": "^7.3.1"
   },
   "husky": {
     "hooks": {
