--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "VV",
   "description": "Neovim GUI Client",
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "private": true,
   "keywords": [
     "vim",
@@ -29,42 +29,42 @@
     "postrelease": "open https://github.com/vv-vim/vv/releases"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.3",
-    "@types/lodash": "^4.14.157",
+    "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.162",
     "@types/msgpack-lite": "^0.1.7",
-    "@types/node": "^12.12.47",
+    "@types/node": "^14.11.10",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "electron": "^9.0.5",
-    "electron-builder": "^22.7.0",
+    "electron": "^10.1.3",
+    "electron-builder": "^22.9.1",
     "electron-notarize": "^1.0.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
+    "husky": "^4.3.0",
+    "jest": "^26.5.3",
     "jest-github-actions-reporter": "^1.0.2",
     "js-yaml": "^3.14.0",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.4.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.4",
-    "pixi.js": "^5.3.0",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.6",
+    "nodemon": "^2.0.5",
+    "pixi.js": "^5.3.3",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3",
     "uglify-es": "3.3.9",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -72,19 +72,19 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@pixi/app": "^5.3.0",
-    "@pixi/core": "^5.3.0",
-    "@pixi/display": "^5.3.0",
-    "@pixi/graphics": "^5.3.0",
-    "@pixi/sprite": "^5.3.0",
-    "@pixi/ticker": "^5.3.0",
-    "@pixi/utils": "^5.3.0",
+    "@pixi/app": "^5.3.3",
+    "@pixi/core": "^5.3.3",
+    "@pixi/display": "^5.3.3",
+    "@pixi/graphics": "^5.3.3",
+    "@pixi/sprite": "^5.3.3",
+    "@pixi/ticker": "^5.3.3",
+    "@pixi/utils": "^5.3.3",
     "child_process": "^1.0.2",
-    "electron-store": "^5.2.0",
-    "electron-updater": "^4.3.1",
+    "electron-store": "^6.0.1",
+    "electron-updater": "^4.3.5",
     "express": "^4.17.1",
     "html2plaintext": "^2.1.2",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "msgpack-lite": "^0.1.26",
     "semver": "^7.3.2",
     "ws": "^7.3.1"
@@ -95,11 +95,11 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,json,md}": [
+    "*.{ts,js,css,json,md}": [
       "prettier --write",
       "git add"
     ],
-    "*.js": [
+    "*.{ts,js}": [
       "eslint --fix",
       "git add"
     ]
