--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -2,7 +2,7 @@
   "name": "@vvim/electron",
   "description": "Neovim GUI Client",
   "author": "Igor Gladkoborodov <igor.gladkoborodov@gmail.com>",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "private": true,
   "keywords": [
     "vim",
@@ -25,7 +25,7 @@
     "webpack:prod": "webpack --config ./config/webpack.prod.config.js",
     "build:local": "yarn webpack:prod; electron-builder -c.mac.identity=null -c.extraMetadata.main=build/main.js --config config/electron-builder/build.js",
     "build:release": "electron-builder -c.extraMetadata.main=build/main.js --config config/electron-builder/release.js --publish always",
-    "build:link": "rm -r /Applications/VV.app; cp -r dist/mac/VV.app /Applications; ln -s -f /Applications/VV.app/Contents/Resources/bin/vv /usr/local/bin/vv",
+    "build:link": "rm -r /Applications/VV.app; cp -R dist/mac/VV.app /Applications; ln -s -f /Applications/VV.app/Contents/Resources/bin/vv /usr/local/bin/vv",
     "build": "npm-run-all clean webpack:prod build:local build:link",
     "release:open-github": "open https://github.com/vv-vim/vv/releases",
     "release": "npm-run-all clean webpack:prod build:release release:open-github",
@@ -46,12 +46,12 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "electron": "10.1.3",
+    "electron": "^11.3.0",
     "electron-builder": "^22.9.1",
     "electron-notarize": "^1.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.5.3",
-    "jest-github-actions-reporter": "^1.0.2",
+    "jest": "^26.6.3",
+    "jest-github-actions-reporter": "^1.0.3",
     "js-yaml": "^3.14.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.5",
