Refactor, update babel, typescript and other dependencies

--- a/packages/browser-renderer/package.json
+++ b/packages/browser-renderer/package.json
@@ -36,37 +36,37 @@
     "url": "https://github.com/vv-vim/vv/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.14",
-    "@types/lodash": "^4.14.162",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/msgpack-lite": "^0.1.7",
-    "@types/node": "^14.11.10",
-    "@types/ws": "^7.2.7",
+    "@types/node": "^14.14.31",
+    "@types/ws": "^7.4.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "jest": "^26.6.3",
     "jest-github-actions-reporter": "^1.0.3",
     "jsdom": "^16.4.0",
     "npm-run-all": "^4.1.5",
-    "pixi.js": "^5.3.3",
-    "typescript": "^4.0.3"
-  },
-  "dependencies": {
-    "@pixi/app": "^5.3.3",
-    "@pixi/core": "^5.3.3",
-    "@pixi/display": "^5.3.3",
-    "@pixi/graphics": "^5.3.3",
-    "@pixi/sprite": "^5.3.3",
-    "@pixi/ticker": "^5.3.3",
-    "@pixi/utils": "^5.3.3",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "lodash": "^4.17.20",
+    "pixi.js": "^5.3.8",
+    "typescript": "^4.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.1.2",
-    "ws": "^7.3.1"
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "@pixi/app": "^5.3.8",
+    "@pixi/core": "^5.3.8",
+    "@pixi/display": "^5.3.8",
+    "@pixi/graphics": "^5.3.8",
+    "@pixi/sprite": "^5.3.8",
+    "@pixi/ticker": "^5.3.8",
+    "@pixi/utils": "^5.3.8",
+    "lodash": "^4.17.21",
+    "ws": "^7.4.3"
   }
 }
