--- a/packages/browser-renderer/babel.config.json
+++ b/packages/browser-renderer/babel.config.json
@@ -7,7 +7,7 @@
       {
         "root": ["."],
         "alias": {
-          "@renderer": "./src"
+          "src": "./src"
         }
       }
     ]
