--- a/packages/server/babel.config.json
+++ b/packages/server/babel.config.json
@@ -7,9 +7,7 @@
       {
         "root": ["."],
         "alias": {
-          "@renderer": "./src/renderer",
-          "@server": "./src/server",
-          "@lib": "./src/lib"
+          "src": "./src"
         }
       }
     ]
