--- a/package.json
+++ b/package.json
@@ -25,13 +25,24 @@
     "dev:server": "yarn workspace @vvim/server dev",
     "dev": "npm-run-all --parallel dev:*",
     "start:electron": "yarn workspace @vvim/electron start",
-    "lint": "yarn eslint . --ext .js,.ts",
-    "test": "yarn workspaces run test --reporters=\"default\" --reporters=\"jest-github-actions-reporter\"",
+    "ci:bootstrap": "yarn build:browser-renderer",
+    "ci:test": "jest --reporters=\"default\" --reporters=\"jest-github-actions-reporter\"",
+    "ci:typecheck": "yarn typecheck",
+    "ci:lint": "yarn lint",
+    "lint": "eslint . --ext .js,.ts",
+    "test": "jest",
     "typecheck": "yarn workspaces run tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -39,6 +50,7 @@
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.0",
+    "jest-github-actions-reporter": "^1.0.3",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
