--- a/packages/browser-renderer/babel.config.json
+++ b/packages/browser-renderer/babel.config.json
@@ -1,7 +1,6 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
+  "extends": "../../babel.config.json",
   "plugins": [
-    "@babel/plugin-proposal-optional-chaining",
     [
       "module-resolver",
       {
