--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ci:lint": "yarn lint",
     "lint": "eslint . --ext .js,.ts",
     "test": "jest",
-    "typecheck": "yarn workspaces run tsc"
+    "typecheck": "tsc -p packages/browser-renderer; tsc -p packages/electron; tsc -p packages/server"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -39,9 +39,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -50,11 +52,15 @@
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "jest-github-actions-reporter": "^1.0.3",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.1.2"
   },
   "husky": {
     "hooks": {
