--- a/packages/browser-renderer/package.json
+++ b/packages/browser-renderer/package.json
@@ -37,20 +37,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0",
-    "babel-loader": "^8.2.2",
-    "jest": "^26.6.3",
     "jsdom": "^16.4.0",
-    "npm-run-all": "^4.1.5",
-    "pixi.js": "^5.3.8",
-    "typescript": "^4.2.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.1.2"
+    "pixi.js": "^5.3.8"
   },
   "dependencies": {
     "@pixi/app": "^5.3.8",
