--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -38,22 +38,14 @@
     "@types/lodash": "^4.14.168",
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^14.14.31",
-    "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "electron": "^11.3.0",
     "electron-builder": "^22.9.1",
     "electron-notarize": "^1.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.6.3",
     "js-yaml": "^3.14.0",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.2.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.1.2"
+    "node-fetch": "^2.6.1"
   },
   "dependencies": {
     "@vvim/browser-renderer": "0.0.1",
