--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,21 +25,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0",
-    "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.2.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.1.2"
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "@vvim/browser-renderer": "0.0.1",
