Move nvim api to the separate package

--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "packages/*"
   ],
   "scripts": {
+    "bootstrap": "yarn build:nvim; yarn build:browser-renderer",
+    "build:nvim": "yarn workspace @vvim/nvim build",
     "build:browser-renderer": "yarn workspace @vvim/browser-renderer build",
-    "build:electron": "yarn build:browser-renderer; yarn workspace @vvim/electron build",
+    "build:electron": "yarn bootstrap; yarn workspace @vvim/electron build",
     "dev:browser-renderer": "yarn workspace @vvim/browser-renderer dev",
     "dev:electron": "yarn workspace @vvim/electron dev",
     "dev:server": "yarn workspace @vvim/server dev",
-    "dev": "npm-run-all --parallel dev:*",
+    "dev": "yarn bootstrap; npm-run-all --parallel dev:*",
     "start:electron": "yarn workspace @vvim/electron start",
-    "ci:bootstrap": "yarn build:browser-renderer",
-    "ci:test": "jest --reporters=\"default\" --reporters=\"jest-github-actions-reporter\"",
-    "ci:typecheck": "yarn typecheck",
-    "ci:lint": "yarn lint",
     "lint": "eslint . --ext .js,.ts",
     "test": "jest",
     "typecheck": "tsc -p packages/browser-renderer; tsc -p packages/electron; tsc -p packages/server"
@@ -37,6 +35,7 @@
     "@babel/core": "^7.13.8",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.20",
@@ -57,6 +56,7 @@
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "regenerator": "^0.14.7",
     "typescript": "^4.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
