--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,7 @@
-# This workflow will do a clean install of node dependencies and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Tests and Linter 
+name: Tests, Lint, Type Check
 
 on:
   pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -41,17 +37,17 @@ jobs:
       run: yarn
 
     - name: Build Required Packages
-      run: yarn ci:bootstrap
+      run: yarn bootstrap
 
     - name: Run ESLint
-      run: yarn ci:lint
+      run: yarn lint
       if: always()
 
     - name: Run Tests
-      run: yarn ci:test
+      run: yarn test --reporters="default" --reporters="jest-github-actions-reporter"
       if: always()
 
     - name: Run TypeScript check
-      run: yarn ci:typecheck
+      run: yarn typecheck
       if: always()
 
