--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,9 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
+  "presets": [["@babel/preset-env", { "modules": "commonjs" }], "@babel/preset-typescript"],
   "plugins": [
     "@babel/plugin-proposal-optional-chaining",
     "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime",
     [
       "module-resolver",
       {
