--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start:electron": "yarn workspace @vvim/electron start",
     "lint": "eslint . --ext .js,.ts",
     "test": "jest",
-    "typecheck": "tsc -p packages/browser-renderer; tsc -p packages/electron; tsc -p packages/server"
+    "typecheck": "tsc -p packages/browser-renderer; tsc -p packages/electron; tsc -p packages/server",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -52,7 +53,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.0",
+    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "jest-github-actions-reporter": "^1.0.3",
     "lint-staged": "^10.5.4",
@@ -64,19 +65,9 @@
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.1.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{ts,js,css,json,md}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{ts,js}": [
-      "eslint --fix",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {}
