--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "declaration": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "isolatedModules": true,
+    "isolatedModules": true
   }
 }
