--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "regenerator": "^0.14.7",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
