--- a/packages/nvim/tsconfig.declaration.json
+++ b/packages/nvim/tsconfig.declaration.json
@@ -6,5 +6,5 @@
     "noEmit": false,
     "outDir": "dist"
   },
-  "include": ["src/index.ts", "@types"]
+  "include": ["src/index.ts", "src/browser.ts", "@types"]
 }
