--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,7 +29,6 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.168",
-    "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0",
     "html-webpack-plugin": "^4.3.0",
@@ -38,9 +37,9 @@
   },
   "dependencies": {
     "@vvim/browser-renderer": "0.0.1",
+    "@vvim/nvim": "0.0.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "msgpack-lite": "^0.1.26",
     "semver": "^7.3.4",
     "ws": "^7.4.3"
   }
